--- a/alpha/home/templates/base-new.html
+++ b/alpha/home/templates/base-new.html
@@ -131,8 +131,8 @@
                         {% like_button "http://"|add:request.META.HTTP_HOST %}
                     </li>
                     <li class="last">
-                        <a href="#" class="footer-icon facebook"></a>
-                        <a href="#" class="footer-icon twitter"></a>
+                        <a href="https://www.facebook.com/cityfusion.ca" target="_blank" class="footer-icon facebook"></a>
+                        <a href="http://www.twitter.com/cityfusion_ca" target="_blank" class="footer-icon twitter"></a>
                         <a href="#" class="footer-icon email"></a>
                         <a href="#" class="footer-icon google"></a>
                         <a href="#" class="footer-icon youtube"></a>
