--- a/alpha/accounts/templates/userena/profile_detail.html
+++ b/alpha/accounts/templates/userena/profile_detail.html
@@ -126,7 +126,7 @@
             {% include 'accounts/_in_the_loop_events_table.html' %}
         </div>
         <div class="box{% if active_tab == "advertising-stats" %} visible{% endif %} advertising-stats">
-            {% include 'advertising/stats/list.html' %}
+            {% include 'advertising/stats/list.html' with ads_items=profile.ads %}
         </div>
     </div>
 
