--- a/alpha/accounts/templates/venue_accounts/_venue_archived_events_table.html
+++ b/alpha/accounts/templates/venue_accounts/_venue_archived_events_table.html
@@ -26,7 +26,7 @@
                 {{event.start_time|just_time}} - {{event.end_time|just_time}}
             </div>
             <div class="entry-description">                    
-                {{ event.venue.name }}, {{ event.venue.street }}, {{ event.venue.city.name_std }}
+                {{ event.venue.name }}, {% if event.venue.street %}{{ event.venue.street }}, {% endif %}{{ event.venue.city.name_std }}
             </div>                
         </div>
 
