--- a/alpha/accounts/templates/venue_accounts/_venue_events_table.html
+++ b/alpha/accounts/templates/venue_accounts/_venue_events_table.html
@@ -10,7 +10,7 @@
     <div class="entry-info {% if private %}{% if not event.is_featured %}with-all-actions{% else %}without-make-feature-action{% endif %}{% endif %}">
         <div class="entry-img-prev">
             {% if event.picture %}
-                <img src="{% cropped_thumbnail event "cropping" width=60 %}" height="60px" weight="60px">
+                <img src="{% cropped_thumbnail event.base "cropping" width=60 %}" height="60px" weight="60px">
             {% else %}
                 <img src="{{STATIC_URL}}images/default-event.jpg" height="60px" weight="60px">
             {% endif %}
