--- a/alpha/event/static/styles/browse/search_tags.css
+++ b/alpha/event/static/styles/browse/search_tags.css
@@ -16,10 +16,10 @@ ul.tagit li.tagit-choice {
     font-weight: normal;
 }
 ul.tagit li.tagit-choice .tagit-label:not(a) {
-    color: #555;
+    color: #000;
 }
 ul.tagit li.tagit-choice a.tagit-close {
-    text-decoration: none;
+    text-decoration: none;    
 }
 ul.tagit li.tagit-choice .tagit-close {
     right: .4em;
@@ -32,15 +32,16 @@ ul.tagit li.tagit-choice .tagit-close .text-icon {
     font-family: arial, sans-serif;
     font-size: 16px;
     line-height: 16px;
-    color: #777;
+    color: #000;
 }
-ul.tagit li.tagit-choice:hover, ul.tagit li.tagit-choice.remove {
-    background-color: #bbcef1;
-    border-color: #6d95e0;
-}
+
 ul.tagit li.tagit-choice a.tagLabel:hover,
-ul.tagit li.tagit-choice a.tagit-close .text-icon:hover {
-    color: #222;
+ul.tagit li.tagit-choice a.tagit-close:hover .text-icon {
+    color: #fff;
+    
+}
+ul.tagit li.tagit-choice a.tagit-close:hover {
+    background: #000;
 }
 ul.tagit input[type="text"] {
     color: #333333;
@@ -78,7 +79,7 @@ ul.searchTags .search-button {
     background: url("/static/images/searchpad/search-button.png") no-repeat;
 }
 
-ul.searchTags li.tagit-choice {
+body ul.searchTags li.tagit-choice {
     position: relative;
     display: inline-block;
     list-style: none;
@@ -92,7 +93,7 @@ ul.searchTags li.tagit-choice {
     line-height: 26px;
     border: 1px solid #ededed;
     vertical-align: top;
-    background: #f6f6f6;
+    background: #e3e3e3;
     margin-right: 4px;
     margin-bottom: 4px;
 
@@ -124,6 +125,8 @@ ul.searchTags li a.tagit-close {
     -webkit-border-radius: 15px;
     -moz-border-radius: 15px;
     border-radius: 15px;
+
+    border: 1px solid #000;
 }
 
 ul.searchTags li a.tagit-close:hover {
