Remove /event/browse url

--- a/alpha/home/templates/_main_navigation.html
+++ b/alpha/home/templates/_main_navigation.html
@@ -21,7 +21,7 @@
         <div class="clr"></div>
     </ul>
     <div class="location-wrapper">
-        <form action="/events/browse" method="get" name="sform">  
+        <form action="/events/" method="get" name="sform">  
         <div class="location-label">Location : </div>
         <div class="location-selection-wrapper">
             <div class="location-text-box"><input type="text" name="location" class="location" value="" placeholder="{{ user_location.user_location_name }}" autocomplete="off"></div>
