--- a/alpha/accounts/templates/accounts/orders.html
+++ b/alpha/accounts/templates/accounts/orders.html
@@ -16,6 +16,7 @@
 
     <script src="{{STATIC_URL}}js/searchpad/jquery.qap_dropdown.js" type="text/javascript"></script>    
     <script src="{{STATIC_URL}}js/accounts/reminder-options.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/tabs.js"></script>
 
     {{ form.map }}
     {{ form.media.js }}
@@ -30,14 +31,14 @@
         </h1>
 
         <div class="tabs-container">
-            <ul class="tabs" data-page-id="orders">
-                <li class="current" data-tab-id="advertising"><span>Advertising</span></li>
-                <li data-tab-id="featured"><span>Featured</span></li>
+            <ul class="tabs" data-page-id="{{ tabs_page }}">
+                <li data-tab-id="advertising" {% if active_tab == "advertising" %}class="current"{% endif %}><span>Advertising</span></li>
+                <li data-tab-id="featured" {% if active_tab == "featured" %}class="current"{% endif %}><span>Featured</span></li>
             </ul>
-            <div class="box visible">
+            <div class="box{% if active_tab == "advertising" %} visible{% endif %}">
                 {% include 'accounts/_order_advertising_table.html' %}                            
             </div>
-            <div class="box">
+            <div class="box{% if active_tab == "featured" %} visible{% endif %}">
                 {% include 'accounts/_order_featured_table.html' %}
             </div>            
         </div>
