--- a/alpha/cityfusion_admin/templates/cf-admin/admin-advertising-edit.html
+++ b/alpha/cityfusion_admin/templates/cf-admin/admin-advertising-edit.html
@@ -9,6 +9,8 @@
     <link href="{{STATIC_URL}}styles/crop.css" rel="stylesheet" type="text/css" />
 
     <script src="{{STATIC_URL}}js/jquery.balloon.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/searchpad/jquery.qap_dropdown.js" type="text/javascript"></script>    
+    <script src="{{STATIC_URL}}js/create_event/venue_account_owner.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/advertising/setup-page.js" type="text/javascript"></script>
 {% endblock %}
 
@@ -59,6 +61,11 @@
                             Name of Campaign                        
                             {{ form.name }}
                             Enter the name of your campaign.
+                        </div>
+
+                        <div class="campaign-owner venue-account-owner">
+                            Campaign owner
+                            {{ form.venue_account }}
                         </div>
 
                         <div class="campaign-name">
