--- a/alpha/event/templates/events/create/create_event.html
+++ b/alpha/event/templates/events/create/create_event.html
@@ -154,7 +154,7 @@
                             </td>                                            
                             <td>{{form.name}}</td>                                            
                         </tr>
-                        <tr>
+                        <tr class="event-owner-tr">
                             <td>
                                 Event Owner
                                 <a href="javascript:void;"  class="balloon">
