--- a/alpha/advertising/templates/advertising/setup.html
+++ b/alpha/advertising/templates/advertising/setup.html
@@ -16,6 +16,8 @@
     <link href="{{STATIC_URL}}styles/crop.css" rel="stylesheet" type="text/css" />
 
     <script src="{{STATIC_URL}}js/jquery.balloon.js" type="text/javascript"></script>
+    <script src="{{STATIC_URL}}js/searchpad/jquery.qap_dropdown.js" type="text/javascript"></script>    
+    <script src="{{STATIC_URL}}js/create_event/venue_account_owner.js" type="text/javascript"></script>
     <script src="{{STATIC_URL}}js/advertising/setup-page.js" type="text/javascript"></script>
 {% endblock %}
 
@@ -61,10 +63,15 @@
                         Enter the name of your campaign.
                     </div>
 
+                    <div class="campaign-owner venue-account-owner">
+                        Campaign owner
+                        {{ form.venue_account }}
+                    </div>
+
                     <div class="campaign-name">
                         Campaign website URL
                         {{ form.website }}
-                    </div>
+                    </div>                    
                     
                     {% setup_advertising_types %}
                     {% setup_advertising_upload %}
