--- a/alpha/accounts/templates/accounts/_order_advertising_table.html
+++ b/alpha/accounts/templates/accounts/_order_advertising_table.html
@@ -21,10 +21,10 @@
             {{ order.status }}
         </td>
         <td>
-            <a href="{% url "account_order_printed" %}">
+            <a href="{% url "account_order_advertising_pdf" order.id %}">
                 <img src="{{STATIC_URL}}images/pdf-icon.png" alt="Get as PDF" title="Get as PDF" />
             </a>
-            <a href="#">
+            <a href="{% url "account_order_advertising_printed" order.id %}">
                 <img src="{{STATIC_URL}}images/print-icon.png" alt="Printed version" title="Printed version">
             </a>
         </td>
