--- a/alpha/event/static/styles/featured/setup.css
+++ b/alpha/event/static/styles/featured/setup.css
@@ -166,6 +166,17 @@
     color: #e17009;
 }
 
-/*.tabs-container {*/
-    width: 695px;
+.choose-province-block {
+    margin-top: 20px;
+}
+
+.choose-province-block header {
+    margin-left: 20px;
+}
+
+.choose-province-block .options {
+    border: 1px solid #d3d3d3;
+    margin: 20px;
+    padding-left: 15px;
+    padding-top: 15px;
 }
