--- a/alpha/event/templates/events/_event_featured.html
+++ b/alpha/event/templates/events/_event_featured.html
@@ -1,10 +1,12 @@
 {% load endless %}
 {% load cropping %}
 {% load featured_event %}
+
+{% if featured_events %}
 <div class="featured-area">
     <h2>Featured Events</h2>
     <div class="features-wrapper" data-no-turbolink>
-        {% paginate 6 featuredEventsFilter.qs using "featured_page" as featured_events %}
+        {% paginate 6 featured_events using "featured_page" %}
         {% for event in featured_events %}
             {% featured_event event %}
         {% endfor %}
@@ -12,9 +14,9 @@
     </div>
 
     <div class="features-navigation">
-        {% get_pages %}    
+        {% get_pages %}
         <ul>
-            <span class="step-links">                
+            <span class="step-links">
                 <a href="{{ pages.first.url }}">
                     first
                 </a>
@@ -27,7 +29,7 @@
                 {% else %}
                     <a class="prev" href="{{ pages.previous.url }}">
                         prev
-                    </a>                
+                    </a>
                 {% endif %}
 
                 {% for page in pages %}
@@ -37,7 +39,7 @@
                     </a>
                 {% endfor %}
 
-                {% if pages.current.is_last %}                            
+                {% if pages.current.is_last %}
                     <a class="next" href="{{ pages.last.url }}">
                         next
                     </a>
@@ -45,7 +47,7 @@
                 {% else %}
                     <a class="next" href="{{ pages.next.url }}">
                         next
-                    </a>            
+                    </a>
                 {% endif %}
 
                 <a href="{{ pages.last.url }}">
@@ -55,3 +57,4 @@
         </ul>
     </div>
 </div>
+{% endif %}
