--- a/alpha/home/templates/base-with-advertising.html
+++ b/alpha/home/templates/base-with-advertising.html
@@ -3,19 +3,9 @@
 
 {% block advertising %}
     <div>
-        {% random %}
-            <div class="advertising-right-container">
-                {% advertising_group "300x250|300x600|300x100" %}
-            </div>
-        {% or %}
-            <div class="advertising-right-container">
-                {% advertising_group "300x250|300x250|300x250|300x250" %}
-            </div>
-        {% or %}
-            <div class="advertising-right-container">
-                {% advertising_group "300x250|300x250|300x250|300x100|300x100" %}
-            </div>
-        {% endrandom %}
+        <div class="advertising-right-container">
+            {% advertising_home_group %}
+        </div>
     </div>
 {% endblock%}
 
