--- a/alpha/advertising/static/styles/advertising.css
+++ b/alpha/advertising/static/styles/advertising.css
@@ -4,7 +4,9 @@
 
 .advertising-right-container {
     position: absolute;
-	right: 15px;	
+	right: 15px;
+	transition: top 500ms;
+	-webkit-transition: top  500ms;
 }
 
 .advertising-right {    
