--- a/alpha/event/templates/events/browse_events.html
+++ b/alpha/event/templates/events/browse_events.html
@@ -20,6 +20,8 @@
     &gt; Browse
 {% endblock %}
 
+{% block body_attributes %}class="modern home"{% endblock %}
+
 {% block featured %}
     {% include 'events/_event_featured.html' %}
 {% endblock %}
