--- a/alpha/event/templates/events/event_detail_page.html
+++ b/alpha/event/templates/events/event_detail_page.html
@@ -117,35 +117,35 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <a href="javascript:void(0);" class="action-facebook-like accented">
-                                        <div 
-                                            href="http://{{ request.META.HTTP_HOST }}{% url 'event_view' event.slug event.start_time|date:"Y-m-d" %}" 
-                                            class="fb-like" 
-                                            data-href="http://{{ request.META.HTTP_HOST }}{% url 'event_view' event.slug event.start_time|date:"Y-m-d" %}" 
-                                            data-send="false" 
-                                            data-layout="button_count" 
-                                            data-width="20" 
-                                            data-show-faces="false" 
-                                            data-font="arial">
-                                        </div>
-                                    </a>
-                                </td>
-                                <td>
                                     <a href="https://twitter.com/intent/tweet?original_referer=http://{{ request.META.HTTP_HOST }}{% url 'event_view' event.slug event.start_time|date:"Y-m-d" %}&text={{event.name}}&tw_p=tweetbutton&url=http://{{ request.META.HTTP_HOST }}{% url 'event_view' event.slug event.start_time|date:"Y-m-d" %}" class="action-tweet accented">
                                         Tweet
                                     </a>                            
                                 </td>
-                            </tr>
-                            
-                            {% if event.website %}
-                                <tr>
-                                    <td colspan="2">
+                                {% if event.website %}
+                                    <td>
                                         <a href="{{ event.website }}" class="block-header accented view-site" target="_blank">
                                             View Site
                                         </a>
-                                    </td>                            
-                                </tr>
-                            {% endif %}                        
+                                    </td>
+                                {% endif %}
+                            </tr>
+                            <tr>
+                                <td colspan="2" class="social-buttons">
+                                    <!-- AddThis Button BEGIN -->
+                                    <div class="addthis_toolbox addthis_default_style addthis_16x16_style">
+                                    <a class="addthis_button_facebook"></a>
+                                    <a class="addthis_button_twitter"></a>
+                                    <a class="addthis_button_google_plusone_share"></a>
+                                    <a class="addthis_button_myspace"></a>
+                                    <a class="addthis_button_pinterest_share"></a>
+                                    <a class="addthis_button_linkedin"></a>
+                                    <a class="addthis_button_compact"></a><a class="addthis_counter addthis_bubble_style"></a>
+                                    </div>
+                                    <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+                                    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5228e9b0617f180a"></script>
+                                    <!-- AddThis Button END -->
+                                </td>
+                            </tr>
                         </table>
                     </div>
                     {% if event.venue %}
