--- a/alpha/event/templates/events/actions/in_the_loop_popup.html
+++ b/alpha/event/templates/events/actions/in_the_loop_popup.html
@@ -10,15 +10,17 @@
             </div>
         </div>        
         <table class="possible-in-the-loop-tags" cellpadding="0" cellspacing="0">
-            {% for tag in event.tags.all %}
-                {% cycle '<tr><td>' '<td>' '<td>' %}
-                    <div class="checkbox">
-                        <input id="id_for_tag_{% uniq_id_for_in_the_loop_tags %}" class="tag" type="checkbox" name="in_the_loop_tags" data-tag="{{ tag.name }}" {% if tag.name in account.in_the_loop_tag_names %}checked="checked"{% endif %}>
-                        <label for="id_for_tag_{% uniq_id_for_in_the_loop_tags %}"></label>
-                        <label for="id_for_tag_{% uniq_id_for_in_the_loop_tags True %}">{{ tag.name }}</label>
-                    </div>
-                {% cycle '</td>' '</td>' '</td></tr>' %}
-            {% endfor %}
+            {% with tag_names=account.in_the_loop_tag_names %}
+                {% for tag in event.tags.all %}
+                    {% cycle '<tr><td>' '<td>' '<td>' %}
+                        <div class="checkbox">
+                            <input id="id_for_tag_{% uniq_id_for_in_the_loop_tags %}" class="tag" type="checkbox" name="in_the_loop_tags" data-tag="{{ tag.name }}" {% if tag.name in tag_names %}checked="checked"{% endif %}>
+                            <label for="id_for_tag_{% uniq_id_for_in_the_loop_tags %}"></label>
+                            <label for="id_for_tag_{% uniq_id_for_in_the_loop_tags True %}">{{ tag.name }}</label>
+                        </div>
+                    {% cycle '</td>' '</td>' '</td></tr>' %}
+                {% endfor %}
+            {% endwith %}            
             <tr><td colspan="3">&nbsp;</td></tr>
         </table>
         <div class="popup-buttons">
