2.One line only on the Similar events (right hand side of event page)

--- a/alpha/event/templates/events/event_detail_page.html
+++ b/alpha/event/templates/events/event_detail_page.html
@@ -191,7 +191,7 @@
 
     <div class="secondary-content">
         <header>
-            Events at {{ event.venue.name }} in {{ event.venue.city.name_std }}
+            Events at {{ event.venue.name }}
         </header>
         <div class="content">
             <table class="secondary-content-table" celpadding="0" cellspacing="0">
