--- a/alpha/accounts/templates/accounts/emails/_similar_events.html
+++ b/alpha/accounts/templates/accounts/emails/_similar_events.html
@@ -20,7 +20,7 @@
                     <td>
                         <div style="border: 1px solid #cccccc;">
                             <div style="border: 5px solid #ffffff;">
-                                <a target="_blank" href="{{site}}{% url 'event_view' event.slug event.start_time|date:"Y-m-d" %}" style="color: #0066cc; font-size: 13px; font-weight: bold; font-family: sans-serif; text-decoration:none; border: none; display: block; line-height:0px;">
+                                <a target="_blank" href="{{site}}{% url 'event_view' event.slug event.next_day.start_time|date:"Y-m-d" %}" style="color: #0066cc; font-size: 13px; font-weight: bold; font-family: sans-serif; text-decoration:none; border: none; display: block; line-height:0px;">
                                     <img src="{% if event.picture %}{{site}}{% cropped_thumbnail event.base "cropping" width=61 %}{% else %}{{site}}{{STATIC_URL}}images/default-event-61x61.jpg{% endif %}"  style="border-collapse:collapse; border: none;" />
                                 </a>
                             </div>
