--- a/alpha/event/templates/events/event_detail_page.html
+++ b/alpha/event/templates/events/event_detail_page.html
@@ -190,9 +190,11 @@
     </div>
 
     <div class="secondary-content">
-        <header>
-            Events at {{ event.venue.name }}
-        </header>
+        <div class="secondary-content-header-wrapper">
+            <header>
+                Events at {{ event.venue.name }}
+            </header>
+        </div>
         <div class="content">
             <table class="secondary-content-table" celpadding="0" cellspacing="0">
                 <tbody>
